meta/kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ac-webapp
  namespace: aspirepress
  labels:
    app: ac-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ac-webapp
  template:
    metadata:
      labels:
        app: ac-webapp
    spec:
      restartPolicy: Always
      containers:
        - image: 'ghcr.io/aspirepress/aspirecloud:0.7'
        name: ac-webapp
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ac-queue-worker
  namespace: aspirepress
  labels:
    app: ac-queue-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ac-queue-worker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ac-queue-worker
    spec:
      restartPolicy: Always
      containers:
        - name: queue-worker
          command: ['bin/queue-worker']
          image: 'ghcr.io/aspirepress/aspirecloud-worker:latest'
---
apiVersion: v1
kind: Service
metadata:
  name: ac-webapp
  namespace: aspirepress
spec:
  ports:
    - port: 80
  selector:
    app: ac-webapp
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ac-webapp
  namespace: aspirepress
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`api.aspirecloud.io`)
    services:
    - name: ac-webapp
      port: 80
